# ML-exam-25

./: LICENSE  README.md  config.toml  final_results.json  hypertune.py  hypertune_ecg.py  pyproject.toml
notebooks/: 01_explore-heart.ipynb  03_1D-models.ipynb
notebooks_adriaan/: 02_2D-models_adriaan_0200cat.ipynb  02_2D-models_adriaan_geen0cat copy.ipynb  02_2D-models_adriaan_geen0cat.ipynb  02_2D-models_sampling copy.ipynb  02_2D-models_sampling.ipynb  02_2D-models_sampling_15000sampling.ipynb  02_2D-models_sampling_5000sampling.ipynb  02_2D-models_sampling_SMOTE.ipynb  03_1D-models_10000sampling.ipynb  03_1D-models_15000sampling_resnet.ipynb  03_1D-models_15000sampling_simplecnn.ipynb  Makefile  start_server.sh
src/: best_hypertune_copy.py  best_model.py  best_model_copy.py  best_stable_config.json  beste_5_models.py  config.toml  final_results.json  final_results_simplecnn.json  hyp_model_2.py  hypertune.py  hypertune_ecg.py  hypertune_final.py  hypertune_test.py  load_heart_data.py  model.py  model_2.py  model_ecg.py  models.py  ray_results.csv  resnet.py  simple_cnn.py  simple_cnn_test.py  simplecnn_results.csv  test.py
src/Hypertune/: best_model.py  hypertune_ecg.py  hypertuning_ray.py
src/configs/: best_config.json  best_config_fast.json  best_simplecnn_config.json  best_stable_config.json  focused_long_training_results.json
src/test_hypertune/: best_hypertune.py  hypertune_ecg.py
src/testing_models/: best_model_copy.py  cnn.py  simple_cnn_models.py
