[project]
name = "MADS-exam-AdriaanS"
version = "0.1.0"
description = "Code for MADS deep learning exam"
authors = [
    { name = "Adriaan Stolk" },
]
dependencies = [
    "mads-datasets>=0.3.10",
    "seaborn>=0.13.1",
    "ConfigSpace>=0.7.1",
    "torch-tb-profiler>=0.4.3",
    "tensorboard>=2.16.2",
    "mlflow>=2.13.2",
    "hyperopt>=0.2.7",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "mltrainer>=0.2.5",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.6.1",
    "imbalanced-learn>=0.12.4",
    "toml>=0.10.2",
    "isort>=6.0.1",
    "black>=25.1.0",
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.uv.dependency-groups.dev]
dependencies = [
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "notebooktester>=0.2.1",
    "pyright>=1.1.391",
    "ruff>=0.4.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N"]


[tool.ruff]
ignore = ["N812", "N806"]
